fixed sizing on smaller screens

--- a/Assets/css/passions.css
+++ b/Assets/css/passions.css
@@ -70,15 +70,15 @@ span.passion-link:hover {
     margin-bottom: 0;
 }
 
-#list-head {
+/*#list-head {
     margin-bottom: 0;
     padding: 0;
-    height: 50px;
+    height: 9.0909%;
     border-radius: 20px 20px 0 0;
     border-bottom: none;
 }
 
-/*#filter {
+#filter {
     height: 100%;
     width: 20%;
     border-radius: 15px 0 0 0;
@@ -137,14 +137,14 @@ span.passion-link:hover {
 
 #list {
     padding: 0;
-    height: 550px;
+    height: 617px;
     border-radius: 20px;
     overflow-y: hidden;
 }
 
 #passion-table {
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
 }
 
 #name {
@@ -165,12 +165,8 @@ span.passion-link:hover {
 }
 
 #passion-table tbody td {
-    padding: 2px;
+    padding: 8px;
     padding-left: 1rem;
-}
-
-#passion-table tr:last-child {
-    border-bottom: none;
 }
 
 .passion-list-link:hover {
@@ -188,35 +184,32 @@ span.passion-link:hover {
 
 #display {
     border-radius: 20px;
-    height: 550px;
+    min-height: 575px;
 }
 
 #box1, #box2 {
-    height: 100%;
     float: left;
     padding: 1rem;
     padding-top: 0;
+    padding-right: 1.5rem;
+    min-height: 575px;
 }
 
 #box1 {
-    width: 45%;
-    padding-right: 2rem;
     border-right: 2px dashed purple;
-}
-
-#box2 {
-    padding-left: 2rem;
-    width: 55%;
 }
 
 .passion-title {
     text-decoration: underline;
     color: rgb(218, 173, 26);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-underline-offset: 2px;
     margin-bottom: 1.5rem;
 }
 
 .passion-heading {
     color: rgb(206, 163, 23);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     margin-top: 3rem;
     margin-bottom: .5rem;
 }
